# first-setup

./: .gitignore  README.md  apps.json  meson.build  progress-page-sample.ui  recipe.json  test.py
.github/workflows/: build.yml  release.yml
data/: meson.build  org.vanillaos.FirstSetup.policy  remove-first-setup-user  remove-first-setup-user.service
debian/: control
po/: POTFILES  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  ml.po  ms.po  nb_NO.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+13 more)
vanilla_first_setup/: application.py  main.py  meson.build  vanilla-first-setup.gresource.xml  vanilla-first-setup.in  window.py
vanilla_first_setup/core/: backend.py  keyboard.py  languages.py  meson.build  timezones.py
vanilla_first_setup/defaults/: applications.py  conn_check.py  hostname.py  keyboard.py  language.py  locations.py  meson.build  network.py  theme.py  timezone.py  user.py  welcome.py  welcome_user.py
vanilla_first_setup/gtk/: applications-dialog.ui  conn-check.ui  default-conn-check.ui  default-hostname.ui  default-keyboard.ui  default-language.ui  default-location.ui  default-theme.ui  default-timezone.ui  default-welcome-user.ui  default-welcome.ui  done.ui  hostname.ui  layout-applications.ui  logout.ui  progress.ui  user.ui  welcome-user.ui  widget-timezone-list-page.ui  window.ui
vanilla_first_setup/scripts/: disable-lockscreen  flatpak  keyboard  logout  meson.build  open-accessibility-settings  open-network-settings  remove-autostart-file  remove-first-setup-user  setup-flatpak-remote  setup-system  timezone
vanilla_first_setup/views/: conn_check.py  done.py  hostname.py  keyboard.py  language.py  locations.py  logout.py  meson.build  progress.py  theme.py  timezone.py  user.py  welcome.py  welcome_user.py
